Kubernetes_Deployments/mssql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: mssql-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: mssql
    template:
        metadata:
            labels:
                app: mssql
        spec:
            containers:
              - name: mssql
                image: mcr.microsoft.com/mssql/server:2022-latest
                ports:
                  - containerPort: 1433
                    name: tcpsql
                volumeMounts:
                  - name: mssqldb
                    mountPath: /var/opt/mssql/data
            volumes:
              - name: mssqldb
                persistentVolumeClaim:
                    claimName: mssql-storage-claim
---
apiVersion: v1
kind: Service
metadata:
    name: mssql-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        app: mssql
    ports:
      - name: mssql
        protocol: TCP
        port: 1433
        targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
    name: mssql-load-balancer
spec:
    type: LoadBalancer
    selector:
        app: mssql
    ports:
      - protocol: TCP
        port: 4000
        targetPort: 1433
