Kubernetes_Deployments/platform-node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: platform-node-port-service
spec:
    type: NodePort
    selector:
        app: platform-service-api
    ports:
      - name: platform-service-api
        protocol: TCP
        port: 8080
        targetPort: 8080
