Kubernetes_Deployments/platform-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: platform-service-deployment
spec:
    replicas: 1
    selector:
        matchLabels:
            app: platform-service-api
    template:
        metadata:
            labels:
                app: platform-service-api
        spec:
            containers:
              - name: platform-service-api
                image: rcaliwag/platform-service-api:latest
---
apiVersion: v1
kind: Service
metadata:
    name: platform-cluster-ip-service
spec:
    type: ClusterIP
    selector:
        app: platform-service-api
    ports:
      - name: platform-service-api
        protocol: TCP
        port: 8080
        targetPort: 8080
