Kubernetes_Deployments/ingress-nginx-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: ingress-service
    #annotations:
    #    kubernetes.io/ingress.class: nginx
    #    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    ingressClassName: nginx
    rules:
      - host: moha.microservices.edu
        http:
            paths:
              - path: /api/platforms
                pathType: Prefix
                backend:
                    service:
                        name: platform-cluster-ip-service
                        port:
                            number: 8080
              - path: /api/cmd/platforms
                pathType: Prefix
                backend:
                    service:
                        name: command-cluster-ip-service
                        port:
                            number: 8080
